<resources>
    <string name="app_name">Music_64</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="text_suggested_song">Suggested song</string>
    <string name="text_genre">Genres</string>
    <string name="title_all_music">All music</string>
    <string name="title_all_audio">All audio</string>
    <string name="title_rock">Alternative rock</string>
    <string name="title_ambient">Ambient</string>
    <string name="title_classical">Classical</string>
    <string name="title_country">Country</string>
    <string name="search_music">Search</string>
    <string name="shuffle">shuffle</string>
    <string name="number_1">1</string>
    <string name="sing">Cuoc vui co don</string>
    <string name="user">Le bao binh</string>
    <string name="error_play_track">Can not play track</string>
    <string name="search">Tìm kiếm</string>
    <string name="title_added">Added</string>
    <string name="title_now_playing">Playing list</string>
    <string name="title_favourite">Add to favourite</string>
    <string name="title_playlist">Add to playing list</string>
</resources>
