<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_genre"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_all_audio"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:scaleType="centerCrop"
        android:src="@drawable/genre_1"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

    <TextView
        android:id="@+id/text_all_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_all_audio"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_all_audio"
        app:layout_constraintEnd_toEndOf="@id/image_all_audio"
        app:layout_constraintStart_toStartOf="@id/image_all_audio" />

    <ImageView
        android:id="@+id/image_rock"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:scaleType="centerCrop"
        android:src="@drawable/genre_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/text_genre" />

    <TextView
        android:id="@+id/text_rock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_rock"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_rock"
        app:layout_constraintEnd_toEndOf="@id/image_rock"
        app:layout_constraintStart_toStartOf="@id/image_rock" />

    <ImageView
        android:id="@+id/image_country"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:scaleType="centerCrop"
        android:src="@drawable/genre_3"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_all_audio" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_country"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_country"
        app:layout_constraintEnd_toEndOf="@id/image_country"
        app:layout_constraintStart_toStartOf="@id/image_country" />

    <ImageView
        android:id="@+id/image_classical"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:scaleType="centerCrop"
        android:src="@drawable/genre_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/image_rock" />

    <TextView
        android:id="@+id/text_classical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_classical"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_classical"
        app:layout_constraintEnd_toEndOf="@id/image_classical"
        app:layout_constraintStart_toStartOf="@id/image_classical" />

    <ImageView
        android:id="@+id/image_all_music"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:scaleType="centerCrop"
        android:src="@drawable/genre_5"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_country" />

    <TextView
        android:id="@+id/text_all_music"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_all_music"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_all_music"
        app:layout_constraintEnd_toEndOf="@id/image_all_music"
        app:layout_constraintStart_toStartOf="@id/image_all_music" />

    <ImageView
        android:id="@+id/image_ambient"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:scaleType="centerCrop"
        android:src="@drawable/genre_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/image_classical" />

    <TextView
        android:id="@+id/text_ambient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_ambient"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_ambient"
        app:layout_constraintEnd_toEndOf="@id/image_ambient"
        app:layout_constraintStart_toStartOf="@id/image_ambient" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
