<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_70"
    android:layout_marginBottom="@dimen/dp_10">

    <TextView
        android:id="@+id/text_favorite_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/number_1"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_favorite_song_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:maxLines="1"
        android:text="@string/sing"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/text_favorite_index"
        app:layout_constraintRight_toLeftOf="@id/image_favorite_show_infor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_favorite_auth_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:text="@string/user"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/text_favorite_index"
        app:layout_constraintRight_toLeftOf="@id/image_favorite_show_infor"
        app:layout_constraintTop_toBottomOf="@id/text_favorite_song_name" />

    <ImageButton
        android:id="@+id/image_favorite_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/color_white"
        android:padding="@dimen/dp_5"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/image_favorite_show_infor"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_favorite_show_infor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/color_white"
        android:src="@drawable/ic_more_vert_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
